Fix: Jumpy animation when expanding elements panel.
https://app.asana.com/0/11140166463836/13103323779654/f

git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@14973 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -541,6 +541,10 @@
 	overflow: hidden;
 }
 
+#sidebar-ui .sidebar-panel-elements .sidebar-panel-content {
+	padding: 0;
+}
+
 #sidebar-ui .sidebar-panel.expanded .sidebar-panel-content {
 	height: 280px;
 	padding: 0;
